--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="contenedor">
             <div class="menu"></div>
             
-            
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum voluptate recusandae aperiam tenetur ab minima aliquam consequuntur eius quos omnis. Vitae neque minima animi quo corrupti similique, expedita, eaque iste ex eius vel odio, cumque eligendi error repudiandae quidem quaerat!</p>
                 <p>incio </p>
                 <ul>
                     <li> home </li>
